# revm-python

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  example.py  pyproject.toml  temp.yml
.github/workflows/: CI.yml  docker.yml
abm/: README.md
abm/bank_reserve/: run.py
abm/bank_reserve/bankreserve/: agents.py  model.py  server.py
abm/bank_reserve/contract/: BankReserve.json  BankReserve.sol
abm/boltzmann/: run.py
abm/boltzmann/wealth_model/: model.py  server.py
example/: basics.py
example/contracts/: counter.json
revm_py/: __init__.py  contract.py
src/: abis.rs  client.rs  contract.rs  evm.rs  lib.rs  logs.rs
tests/: sample.py  test_contract.py  test_evm.py  test_gas.py  test_parser.py
tests/fixtures/: simplepayable.json
