[package]
name = "revm-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "revm_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
ethers = "2.0.7"
#hex = "0.4.3"
# using older version as there seems to be an issue with ruint feature
pyo3 = {version = "0.17.1", features = ["anyhow", "extension-module"]}
revm = "3.3.0"
serde = "1.0.165"
serde_json = "1.0.99"
ruint = { version= "1.4.1", features = ["primitive-types", "pyo3"]}