[package]
name = "revm-python"
version = "0.1.0"
edition = "2021"
authors = ["Dave Bryson <davebryson@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/davebryson/revmup-python"
homepage = "https://github.com/davebryson/revmup-python"
categories = ["cryptography::cryptocurrencies"]
keywords = ["revm", "python", "ethereum", "web3"]

[lib]
name = "revm_py"
crate-type = ["cdylib"]

[dependencies]
# abi and evm
alloy-json-abi = "0.3.1"
revm = "3.3.0"

# rust -> python
pyo3 = { version = "0.19.2", features = ["eyre", "extension-module"] }

# extras...
eyre = "0.6.8"
serde = "1.0.165"
serde_json = "1.0.99"
ruint = { version = "1.10.1", features = ["primitive-types", "pyo3"] }
